--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "webpack-dev-server --hot --inline --progress --colors --config config/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "webpack --progress --colors --config config/webpack.prod.conf.js"
+    "build": "webpack --progress --colors --config config/webpack.prod.conf.js",
+    "test": "jest"
   },
   "author": "Jason",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
@@ -32,7 +34,11 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
+    "puppeteer": "^1.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
