--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Jason",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.6.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-import": "^1.12.1",
@@ -24,6 +25,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
@@ -45,5 +47,13 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
-  }
+  },
+  "browserslist": [
+    ">1%",
+    "last 2 versons",
+    "not ie <= 8",
+    "iOS => 8",
+    "Firefox >= 20",
+    "Android > 4.4"
+  ]
 }
