--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "puppeteer": "^1.19.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.6.3"
