--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
+    "@types/react-router-dom": "^4.3.5",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "puppeteer": "^1.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.6.3"
