--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^4.3.5",
+    "@types/redux-form": "^8.1.9",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "puppeteer": "^1.19.0",
@@ -54,6 +55,8 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
+    "redux-form": "^8.2.6",
+    "redux-form-website-template": "^1.0.11",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.6.3"
   },
