--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,12 @@
     "compilerOptions": {
         "outDir": "./dist/",
         "sourceMap": true,
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "module": "commonjs",
         "target": "es5",
         "jsx": "react",
-        "allowSyntheticDefaultImports": true
+        "allowJs":true,
+        "allowSyntheticDefaultImports": false
     },
     "include": [
         "./src/**/*"
